@@ -55,14 +55,14 @@ test safe-1.2 {Safe Tk loading into an interpreter} {
     safe::interpDelete a
     set l
 } $hidden_cmds
-test safe-1.3 {Safe Tk loading into an interpreter} {
+test safe-1.3 {Safe Tk loading into an interpreter} -body {
     catch {safe::interpDelete a}
     safe::interpCreate a
     safe::loadTk a
     set l [lsort [interp aliases a]]
     safe::interpDelete a
     set l
-} {encoding exit file load source}
+} -match glob -result {*encoding*exit*file*load*source*}
 
 test safe-2.1 {Unsafe commands not available} {
     catch {safe::interpDelete a}
